force-app/main/default/objects/FAAProcessStop__e/FAAProcessStop__e.object-meta.xml
<CustomObject>
    <label>FAAProcessStop</label>
    <pluralLabel>FAAProcessStops</pluralLabel>
</CustomObject>