force-app/main/default/objects/FAAProcessStop__e/fields/FraudProvider__c.field-meta.xml
<CustomField>
    <fullName>FraudProvider__c</fullName>
    <label>FraudProvider</label>
    <length>80</length>
    <type>Text</type>
</CustomField>