force-app/main/default/objects/FAAProcessStop__e/fields/FraudStatus__c.field-meta.xml
<CustomField>
    <fullName>FraudStatus__c</fullName>
    <label>FraudStatus</label>
    <length>80</length>
    <type>Text</type>
</CustomField>