force-app/main/default/objects/FAAProcessStop__e/fields/OrderSummaryId__c.field-meta.xml
<CustomField>
    <fullName>OrderSummaryId__c</fullName>
    <label>OrderSummaryId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>